--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ verify_ssl = true
 [packages]
 django = "*"
 pycodestyle = "*"
+django-webpack-loader = "*"
+pytz = "*"
 
 [requires]
 python_version = "3.7"
