--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "core-js": "^3.4.3",
     "vue": "^2.6.10",
-    "vuetify": "^2.1.0"
+    "vuetify": "^2.1.0",
+    "webpack-bundle-tracker": "^0.4.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
